fix layout spacing

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2104,8 +2104,8 @@ figure.icon {
     }
 
     .ts-block {
-        padding-bottom: 8.125rem;
-        padding-top: 8.125rem;
+        padding-bottom: 3.3rem;
+        padding-top: 3.3rem;
     }
 
     .ts-card__image {
@@ -2316,6 +2316,9 @@ input {
 
 .mw-50 {
     width: 50% !important;
+}
+.mw-25 {
+    width: 20rem !important;
 }
 
 .timeline {
